_build/parser.automaton
State 0:
file' -> . file [ # ]
-- On WITH shift to state 1
-- On file shift to state 213

State 1:
file -> WITH . ident DOT ident SEMICOLON USE ident DOT ident SEMICOLON PROC proc EOF [ # ]
-- On IDENT shift to state 2
-- On ident_desc shift to state 3
-- On ident shift to state 4

State 2:
ident_desc -> IDENT . [ TIMES THEN SEMICOLON RPAREN RETURN REM PLUS OR NEQ MINUS LT LPAREN LOOP LEQ IS IN GT GEQ EQ DOTDOT DOT DIV COMMA COLON AND AFFECT ]
-- On TIMES reduce production ident_desc -> IDENT 
-- On THEN reduce production ident_desc -> IDENT 
-- On SEMICOLON reduce production ident_desc -> IDENT 
-- On RPAREN reduce production ident_desc -> IDENT 
-- On RETURN reduce production ident_desc -> IDENT 
-- On REM reduce production ident_desc -> IDENT 
-- On PLUS reduce production ident_desc -> IDENT 
-- On OR reduce production ident_desc -> IDENT 
-- On NEQ reduce production ident_desc -> IDENT 
-- On MINUS reduce production ident_desc -> IDENT 
-- On LT reduce production ident_desc -> IDENT 
-- On LPAREN reduce production ident_desc -> IDENT 
-- On LOOP reduce production ident_desc -> IDENT 
-- On LEQ reduce production ident_desc -> IDENT 
-- On IS reduce production ident_desc -> IDENT 
-- On IN reduce production ident_desc -> IDENT 
-- On GT reduce production ident_desc -> IDENT 
-- On GEQ reduce production ident_desc -> IDENT 
-- On EQ reduce production ident_desc -> IDENT 
-- On DOTDOT reduce production ident_desc -> IDENT 
-- On DOT reduce production ident_desc -> IDENT 
-- On DIV reduce production ident_desc -> IDENT 
-- On COMMA reduce production ident_desc -> IDENT 
-- On COLON reduce production ident_desc -> IDENT 
-- On AND reduce production ident_desc -> IDENT 
-- On AFFECT reduce production ident_desc -> IDENT 

State 3:
ident -> ident_desc . [ TIMES THEN SEMICOLON RPAREN RETURN REM PLUS OR NEQ MINUS LT LPAREN LOOP LEQ IS IN GT GEQ EQ DOTDOT DOT DIV COMMA COLON AND AFFECT ]
-- On TIMES reduce production ident -> ident_desc 
-- On THEN reduce production ident -> ident_desc 
-- On SEMICOLON reduce production ident -> ident_desc 
-- On RPAREN reduce production ident -> ident_desc 
-- On RETURN reduce production ident -> ident_desc 
-- On REM reduce production ident -> ident_desc 
-- On PLUS reduce production ident -> ident_desc 
-- On OR reduce production ident -> ident_desc 
-- On NEQ reduce production ident -> ident_desc 
-- On MINUS reduce production ident -> ident_desc 
-- On LT reduce production ident -> ident_desc 
-- On LPAREN reduce production ident -> ident_desc 
-- On LOOP reduce production ident -> ident_desc 
-- On LEQ reduce production ident -> ident_desc 
-- On IS reduce production ident -> ident_desc 
-- On IN reduce production ident -> ident_desc 
-- On GT reduce production ident -> ident_desc 
-- On GEQ reduce production ident -> ident_desc 
-- On EQ reduce production ident -> ident_desc 
-- On DOTDOT reduce production ident -> ident_desc 
-- On DOT reduce production ident -> ident_desc 
-- On DIV reduce production ident -> ident_desc 
-- On COMMA reduce production ident -> ident_desc 
-- On COLON reduce production ident -> ident_desc 
-- On AND reduce production ident -> ident_desc 
-- On AFFECT reduce production ident -> ident_desc 

State 4:
file -> WITH ident . DOT ident SEMICOLON USE ident DOT ident SEMICOLON PROC proc EOF [ # ]
-- On DOT shift to state 5

State 5:
file -> WITH ident DOT . ident SEMICOLON USE ident DOT ident SEMICOLON PROC proc EOF [ # ]
-- On IDENT shift to state 2
-- On ident_desc shift to state 3
-- On ident shift to state 6

State 6:
file -> WITH ident DOT ident . SEMICOLON USE ident DOT ident SEMICOLON PROC proc EOF [ # ]
-- On SEMICOLON shift to state 7

State 7:
file -> WITH ident DOT ident SEMICOLON . USE ident DOT ident SEMICOLON PROC proc EOF [ # ]
-- On USE shift to state 8

State 8:
file -> WITH ident DOT ident SEMICOLON USE . ident DOT ident SEMICOLON PROC proc EOF [ # ]
-- On IDENT shift to state 2
-- On ident_desc shift to state 3
-- On ident shift to state 9

State 9:
file -> WITH ident DOT ident SEMICOLON USE ident . DOT ident SEMICOLON PROC proc EOF [ # ]
-- On DOT shift to state 10

State 10:
file -> WITH ident DOT ident SEMICOLON USE ident DOT . ident SEMICOLON PROC proc EOF [ # ]
-- On IDENT shift to state 2
-- On ident_desc shift to state 3
-- On ident shift to state 11

State 11:
file -> WITH ident DOT ident SEMICOLON USE ident DOT ident . SEMICOLON PROC proc EOF [ # ]
-- On SEMICOLON shift to state 12

State 12:
file -> WITH ident DOT ident SEMICOLON USE ident DOT ident SEMICOLON . PROC proc EOF [ # ]
-- On PROC shift to state 13

State 13:
file -> WITH ident DOT ident SEMICOLON USE ident DOT ident SEMICOLON PROC . proc EOF [ # ]
-- On IDENT shift to state 2
-- On proc_or_func shift to state 14
-- On proc shift to state 15
-- On ident_desc shift to state 3
-- On ident shift to state 17

State 14:
proc -> proc_or_func . [ TYPE PROC IDENT FUNC EOF BEGIN ]
-- On TYPE reduce production proc -> proc_or_func 
-- On PROC reduce production proc -> proc_or_func 
-- On IDENT reduce production proc -> proc_or_func 
-- On FUNC reduce production proc -> proc_or_func 
-- On EOF reduce production proc -> proc_or_func 
-- On BEGIN reduce production proc -> proc_or_func 

State 15:
file -> WITH ident DOT ident SEMICOLON USE ident DOT ident SEMICOLON PROC proc . EOF [ # ]
-- On EOF shift to state 16

State 16:
file -> WITH ident DOT ident SEMICOLON USE ident DOT ident SEMICOLON PROC proc EOF . [ # ]
-- On # reduce production file -> WITH ident DOT ident SEMICOLON USE ident DOT ident SEMICOLON PROC proc EOF 

State 17:
proc_or_func -> ident . option(params) option(preceded(RETURN,type_annot)) IS decls BEGIN stmts END option(ident) SEMICOLON [ TYPE PROC IDENT FUNC EOF BEGIN ]
-- On LPAREN shift to state 18
-- On params shift to state 36
-- On option(params) shift to state 37
-- On RETURN reduce production option(params) -> 
-- On IS reduce production option(params) -> 

State 18:
params -> LPAREN . separated_nonempty_list(SEMICOLON,param) RPAREN [ RETURN IS ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(SEMICOLON,param) shift to state 19
-- On separated_nonempty_list(COMMA,ident) shift to state 21
-- On param shift to state 30
-- On ident_desc shift to state 3
-- On ident shift to state 33

State 19:
params -> LPAREN separated_nonempty_list(SEMICOLON,param) . RPAREN [ RETURN IS ]
-- On RPAREN shift to state 20

State 20:
params -> LPAREN separated_nonempty_list(SEMICOLON,param) RPAREN . [ RETURN IS ]
-- On RETURN reduce production params -> LPAREN separated_nonempty_list(SEMICOLON,param) RPAREN 
-- On IS reduce production params -> LPAREN separated_nonempty_list(SEMICOLON,param) RPAREN 

State 21:
param -> separated_nonempty_list(COMMA,ident) . COLON mode type_annot [ SEMICOLON RPAREN ]
-- On COLON shift to state 22

State 22:
param -> separated_nonempty_list(COMMA,ident) COLON . mode type_annot [ SEMICOLON RPAREN ]
-- On IN shift to state 23
-- On mode shift to state 25
-- On IDENT reduce production mode -> 
-- On ACCESS reduce production mode -> 

State 23:
mode -> IN . [ IDENT ACCESS ]
mode -> IN . OUT [ IDENT ACCESS ]
-- On OUT shift to state 24
-- On IDENT reduce production mode -> IN 
-- On ACCESS reduce production mode -> IN 

State 24:
mode -> IN OUT . [ IDENT ACCESS ]
-- On IDENT reduce production mode -> IN OUT 
-- On ACCESS reduce production mode -> IN OUT 

State 25:
param -> separated_nonempty_list(COMMA,ident) COLON mode . type_annot [ SEMICOLON RPAREN ]
-- On IDENT shift to state 2
-- On ACCESS shift to state 26
-- On type_annot shift to state 28
-- On ident_desc shift to state 3
-- On ident shift to state 29

State 26:
type_annot -> ACCESS . ident [ SEMICOLON RPAREN IS AFFECT ]
-- On IDENT shift to state 2
-- On ident_desc shift to state 3
-- On ident shift to state 27

State 27:
type_annot -> ACCESS ident . [ SEMICOLON RPAREN IS AFFECT ]
-- On SEMICOLON reduce production type_annot -> ACCESS ident 
-- On RPAREN reduce production type_annot -> ACCESS ident 
-- On IS reduce production type_annot -> ACCESS ident 
-- On AFFECT reduce production type_annot -> ACCESS ident 

State 28:
param -> separated_nonempty_list(COMMA,ident) COLON mode type_annot . [ SEMICOLON RPAREN ]
-- On SEMICOLON reduce production param -> separated_nonempty_list(COMMA,ident) COLON mode type_annot 
-- On RPAREN reduce production param -> separated_nonempty_list(COMMA,ident) COLON mode type_annot 

State 29:
type_annot -> ident . [ SEMICOLON RPAREN IS AFFECT ]
-- On SEMICOLON reduce production type_annot -> ident 
-- On RPAREN reduce production type_annot -> ident 
-- On IS reduce production type_annot -> ident 
-- On AFFECT reduce production type_annot -> ident 

State 30:
separated_nonempty_list(SEMICOLON,param) -> param . [ RPAREN ]
separated_nonempty_list(SEMICOLON,param) -> param . SEMICOLON separated_nonempty_list(SEMICOLON,param) [ RPAREN ]
-- On SEMICOLON shift to state 31
-- On RPAREN reduce production separated_nonempty_list(SEMICOLON,param) -> param 

State 31:
separated_nonempty_list(SEMICOLON,param) -> param SEMICOLON . separated_nonempty_list(SEMICOLON,param) [ RPAREN ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(SEMICOLON,param) shift to state 32
-- On separated_nonempty_list(COMMA,ident) shift to state 21
-- On param shift to state 30
-- On ident_desc shift to state 3
-- On ident shift to state 33

State 32:
separated_nonempty_list(SEMICOLON,param) -> param SEMICOLON separated_nonempty_list(SEMICOLON,param) . [ RPAREN ]
-- On RPAREN reduce production separated_nonempty_list(SEMICOLON,param) -> param SEMICOLON separated_nonempty_list(SEMICOLON,param) 

State 33:
separated_nonempty_list(COMMA,ident) -> ident . [ COLON ]
separated_nonempty_list(COMMA,ident) -> ident . COMMA separated_nonempty_list(COMMA,ident) [ COLON ]
-- On COMMA shift to state 34
-- On COLON reduce production separated_nonempty_list(COMMA,ident) -> ident 

State 34:
separated_nonempty_list(COMMA,ident) -> ident COMMA . separated_nonempty_list(COMMA,ident) [ COLON ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 35
-- On ident_desc shift to state 3
-- On ident shift to state 33

State 35:
separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident) . [ COLON ]
-- On COLON reduce production separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident) 

State 36:
option(params) -> params . [ RETURN IS ]
-- On RETURN reduce production option(params) -> params 
-- On IS reduce production option(params) -> params 

State 37:
proc_or_func -> ident option(params) . option(preceded(RETURN,type_annot)) IS decls BEGIN stmts END option(ident) SEMICOLON [ TYPE PROC IDENT FUNC EOF BEGIN ]
-- On RETURN shift to state 38
-- On option(preceded(RETURN,type_annot)) shift to state 40
-- On IS reduce production option(preceded(RETURN,type_annot)) -> 

State 38:
option(preceded(RETURN,type_annot)) -> RETURN . type_annot [ IS ]
-- On IDENT shift to state 2
-- On ACCESS shift to state 26
-- On type_annot shift to state 39
-- On ident_desc shift to state 3
-- On ident shift to state 29

State 39:
option(preceded(RETURN,type_annot)) -> RETURN type_annot . [ IS ]
-- On IS reduce production option(preceded(RETURN,type_annot)) -> RETURN type_annot 

State 40:
proc_or_func -> ident option(params) option(preceded(RETURN,type_annot)) . IS decls BEGIN stmts END option(ident) SEMICOLON [ TYPE PROC IDENT FUNC EOF BEGIN ]
-- On IS shift to state 41

State 41:
proc_or_func -> ident option(params) option(preceded(RETURN,type_annot)) IS . decls BEGIN stmts END option(ident) SEMICOLON [ TYPE PROC IDENT FUNC EOF BEGIN ]
-- On TYPE shift to state 42
-- On PROC shift to state 59
-- On IDENT shift to state 2
-- On FUNC shift to state 61
-- On separated_nonempty_list(COMMA,ident) shift to state 64
-- On list(decl) shift to state 129
-- On ident_desc shift to state 3
-- On ident shift to state 33
-- On decls shift to state 130
-- On decl shift to state 211
-- On BEGIN reduce production list(decl) -> 

State 42:
decl -> TYPE . ident option(preceded(IS,type_annot)) SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
decl -> TYPE . ident IS RECORD nonempty_list(fields) END RECORD SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On IDENT shift to state 2
-- On ident_desc shift to state 3
-- On ident shift to state 43

State 43:
decl -> TYPE ident . option(preceded(IS,type_annot)) SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
decl -> TYPE ident . IS RECORD nonempty_list(fields) END RECORD SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On IS shift to state 44
-- On option(preceded(IS,type_annot)) shift to state 57
-- On SEMICOLON reduce production option(preceded(IS,type_annot)) -> 

State 44:
decl -> TYPE ident IS . RECORD nonempty_list(fields) END RECORD SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
option(preceded(IS,type_annot)) -> IS . type_annot [ SEMICOLON ]
-- On RECORD shift to state 45
-- On IDENT shift to state 2
-- On ACCESS shift to state 26
-- On type_annot shift to state 56
-- On ident_desc shift to state 3
-- On ident shift to state 29

State 45:
decl -> TYPE ident IS RECORD . nonempty_list(fields) END RECORD SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 46
-- On nonempty_list(fields) shift to state 50
-- On ident_desc shift to state 3
-- On ident shift to state 33
-- On fields shift to state 54

State 46:
fields -> separated_nonempty_list(COMMA,ident) . COLON type_annot SEMICOLON [ IDENT END ]
-- On COLON shift to state 47

State 47:
fields -> separated_nonempty_list(COMMA,ident) COLON . type_annot SEMICOLON [ IDENT END ]
-- On IDENT shift to state 2
-- On ACCESS shift to state 26
-- On type_annot shift to state 48
-- On ident_desc shift to state 3
-- On ident shift to state 29

State 48:
fields -> separated_nonempty_list(COMMA,ident) COLON type_annot . SEMICOLON [ IDENT END ]
-- On SEMICOLON shift to state 49

State 49:
fields -> separated_nonempty_list(COMMA,ident) COLON type_annot SEMICOLON . [ IDENT END ]
-- On IDENT reduce production fields -> separated_nonempty_list(COMMA,ident) COLON type_annot SEMICOLON 
-- On END reduce production fields -> separated_nonempty_list(COMMA,ident) COLON type_annot SEMICOLON 

State 50:
decl -> TYPE ident IS RECORD nonempty_list(fields) . END RECORD SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On END shift to state 51

State 51:
decl -> TYPE ident IS RECORD nonempty_list(fields) END . RECORD SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On RECORD shift to state 52

State 52:
decl -> TYPE ident IS RECORD nonempty_list(fields) END RECORD . SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On SEMICOLON shift to state 53

State 53:
decl -> TYPE ident IS RECORD nonempty_list(fields) END RECORD SEMICOLON . [ TYPE PROC IDENT FUNC BEGIN ]
-- On TYPE reduce production decl -> TYPE ident IS RECORD nonempty_list(fields) END RECORD SEMICOLON 
-- On PROC reduce production decl -> TYPE ident IS RECORD nonempty_list(fields) END RECORD SEMICOLON 
-- On IDENT reduce production decl -> TYPE ident IS RECORD nonempty_list(fields) END RECORD SEMICOLON 
-- On FUNC reduce production decl -> TYPE ident IS RECORD nonempty_list(fields) END RECORD SEMICOLON 
-- On BEGIN reduce production decl -> TYPE ident IS RECORD nonempty_list(fields) END RECORD SEMICOLON 

State 54:
nonempty_list(fields) -> fields . [ END ]
nonempty_list(fields) -> fields . nonempty_list(fields) [ END ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 46
-- On nonempty_list(fields) shift to state 55
-- On ident_desc shift to state 3
-- On ident shift to state 33
-- On fields shift to state 54
-- On END reduce production nonempty_list(fields) -> fields 

State 55:
nonempty_list(fields) -> fields nonempty_list(fields) . [ END ]
-- On END reduce production nonempty_list(fields) -> fields nonempty_list(fields) 

State 56:
option(preceded(IS,type_annot)) -> IS type_annot . [ SEMICOLON ]
-- On SEMICOLON reduce production option(preceded(IS,type_annot)) -> IS type_annot 

State 57:
decl -> TYPE ident option(preceded(IS,type_annot)) . SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On SEMICOLON shift to state 58

State 58:
decl -> TYPE ident option(preceded(IS,type_annot)) SEMICOLON . [ TYPE PROC IDENT FUNC BEGIN ]
-- On TYPE reduce production decl -> TYPE ident option(preceded(IS,type_annot)) SEMICOLON 
-- On PROC reduce production decl -> TYPE ident option(preceded(IS,type_annot)) SEMICOLON 
-- On IDENT reduce production decl -> TYPE ident option(preceded(IS,type_annot)) SEMICOLON 
-- On FUNC reduce production decl -> TYPE ident option(preceded(IS,type_annot)) SEMICOLON 
-- On BEGIN reduce production decl -> TYPE ident option(preceded(IS,type_annot)) SEMICOLON 

State 59:
decl -> PROC . proc [ TYPE PROC IDENT FUNC BEGIN ]
-- On IDENT shift to state 2
-- On proc_or_func shift to state 14
-- On proc shift to state 60
-- On ident_desc shift to state 3
-- On ident shift to state 17

State 60:
decl -> PROC proc . [ TYPE PROC IDENT FUNC BEGIN ]
-- On TYPE reduce production decl -> PROC proc 
-- On PROC reduce production decl -> PROC proc 
-- On IDENT reduce production decl -> PROC proc 
-- On FUNC reduce production decl -> PROC proc 
-- On BEGIN reduce production decl -> PROC proc 

State 61:
decl -> FUNC . func [ TYPE PROC IDENT FUNC BEGIN ]
-- On IDENT shift to state 2
-- On proc_or_func shift to state 62
-- On ident_desc shift to state 3
-- On ident shift to state 17
-- On func shift to state 63

State 62:
func -> proc_or_func . [ TYPE PROC IDENT FUNC BEGIN ]
-- On TYPE reduce production func -> proc_or_func 
-- On PROC reduce production func -> proc_or_func 
-- On IDENT reduce production func -> proc_or_func 
-- On FUNC reduce production func -> proc_or_func 
-- On BEGIN reduce production func -> proc_or_func 

State 63:
decl -> FUNC func . [ TYPE PROC IDENT FUNC BEGIN ]
-- On TYPE reduce production decl -> FUNC func 
-- On PROC reduce production decl -> FUNC func 
-- On IDENT reduce production decl -> FUNC func 
-- On FUNC reduce production decl -> FUNC func 
-- On BEGIN reduce production decl -> FUNC func 

State 64:
decl -> separated_nonempty_list(COMMA,ident) . COLON type_annot option(preceded(AFFECT,expr)) SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On COLON shift to state 65

State 65:
decl -> separated_nonempty_list(COMMA,ident) COLON . type_annot option(preceded(AFFECT,expr)) SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On IDENT shift to state 2
-- On ACCESS shift to state 26
-- On type_annot shift to state 66
-- On ident_desc shift to state 3
-- On ident shift to state 29

State 66:
decl -> separated_nonempty_list(COMMA,ident) COLON type_annot . option(preceded(AFFECT,expr)) SEMICOLON [ TYPE PROC IDENT FUNC BEGIN ]
-- On AFFECT shift to state 67
-- On option(preceded(AFFECT,expr)) shift to state 127
-- On SEMICOLON reduce production option(preceded(AFFECT,expr)) -> 

State 67:
option(preceded(AFFECT,expr)) -> AFFECT . expr [ SEMICOLON ]
-- On NULL shift to state 68
-- On NOT shift to state 69
-- On NEW shift to state 70
-- On MINUS shift to state 72
-- On LPAREN shift to state 73
-- On INT shift to state 74
-- On IDENT shift to state 2
-- On CHAR_VAL shift to state 75
-- On CHAR shift to state 77
-- On BOOL shift to state 78
-- On ident_desc shift to state 3
-- On ident shift to state 79
-- On expr_desc shift to state 83
-- On expr shift to state 126
-- On const shift to state 89

State 68:
const -> NULL . [ TIMES THEN SEMICOLON RPAREN REM PLUS OR NEQ MINUS LT LOOP LEQ GT GEQ EQ DOTDOT DOT DIV COMMA AND ]
-- On TIMES reduce production const -> NULL 
-- On THEN reduce production const -> NULL 
-- On SEMICOLON reduce production const -> NULL 
-- On RPAREN reduce production const -> NULL 
-- On REM reduce production const -> NULL 
-- On PLUS reduce production const -> NULL 
-- On OR reduce production const -> NULL 
-- On NEQ reduce production const -> NULL 
-- On MINUS reduce production const -> NULL 
-- On LT reduce production const -> NULL 
-- On LOOP reduce production const -> NULL 
-- On LEQ reduce production const -> NULL 
-- On GT reduce production const -> NULL 
-- On GEQ reduce production const -> NULL 
-- On EQ reduce production const -> NULL 
-- On DOTDOT reduce production const -> NULL 
-- On DOT reduce production const -> NULL 
-- On DIV reduce production const -> NULL 
-- On COMMA reduce production const -> NULL 
-- On AND reduce production const -> NULL 

State 69:
expr_desc -> NOT . expr [ TIMES THEN SEMICOLON RPAREN REM PLUS OR NEQ MINUS LT LOOP LEQ GT GEQ EQ DOTDOT DOT DIV COMMA AND ]
-- On NULL shift to state 68
-- On NOT shift to state 69
-- On NEW shift to state 70
-- On MINUS shift to state 72
-- On LPAREN shift to state 73
-- On INT shift to state 74
-- On IDENT shift to state 2
-- On CHAR_VAL shift to state 75
-- On CHAR shift to state 77
-- On BOOL shift to state 78
-- On ident_desc shift to state 3
-- On ident shift to state 79
-- On expr_desc shift to state 83
-- On expr shift to state 125
-- On const shift to state 89

State 70:
expr_desc -> NEW . ident [ TIMES THEN SEMICOLON RPAREN REM PLUS OR NEQ MINUS LT LOOP LEQ GT GEQ EQ DOTDOT DOT DIV COMMA AND ]
-- On IDENT shift to state 2
-- On ident_desc shift to state 3
-- On ident shift to state 71
